--- a/src/app/tryout/tryout.component.html
+++ b/src/app/tryout/tryout.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Science Bowl Tryouts</h1>
+  <h1>{{ tryout?.title }}</h1>
 
   <ng-container *ngIf="!started">
     <div *ngIf="tryout?.started">
