--- a/src/app/admin/tryout.results.component.html
+++ b/src/app/admin/tryout.results.component.html
@@ -1,13 +1,13 @@
 <h1>Tryout Results</h1>
 
-<p>Results are displayed as <code>(score)</code> / <code>(# answered)</code>.</p>
+<p>Results are displayed as <code>(score) / (# answered)</code>.</p>
 
 <ng-container *ngIf="!tryouts">
   <p>Loading tryout results! <i class="fas fa-spinner fa-spin fa-2x"></i></p>
 </ng-container>
 
 <ng-container *ngFor="let tryout of tryouts;">
-  <h3>{{ tryout.start | date:'y' }} <small class="text-muted">{{ tryout.start | date:'short' }} - {{ tryout.end | date:'short' }}</small></h3>
+  <h3>{{ tryout.title }} <small class="text-muted">{{ tryout.start | date:'short' }} - {{ tryout.end | date:'short' }}</small></h3>
 
   <table class="table table-striped table-hover">
     <thead class="thead-inverse">
@@ -15,6 +15,7 @@
         <th>Name</th>
         <th>Year</th>
         <th>Started</th>
+        <th>Finished?</th>
         <th *ngFor="let subject of config.SUBJECTS;">{{ config.SUBJECT_DISPLAY[subject] }}</th>
         <th>Total</th>
       </tr>
@@ -24,6 +25,7 @@
         <td>{{ result.name.first }} {{ result.name.last }}</td>
         <td>{{ result.year }}</td>
         <td>{{ result.started | date:'short' }}</td>
+        <td><i class="fas" [ngClass]="{'fa-check': result.finished, 'fa-times': !result.finished }"></i></td>
         <td *ngFor="let subject of config.SUBJECTS;">{{ result.scores[subject].score }} / {{ result.scores[subject].answered }}</td>
         <td>{{ result.scores.total.score }} / {{ result.scores.total.answered }}</td>
       </tr>
