updated various frontend things

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" routerLink="/">Blair Science Bowl</a>
+  <a class="navbar-brand" routerLink="/">Science Bowl</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,3 +30,11 @@
 <div id="content" class="container">
   <router-outlet></router-outlet>
 </div>
+
+<footer class="footer bg-dark p-3">
+  <div class="container">
+    <span class="text-white">Website designed and implemented by <a href="https://singerng.github.io">Noah Singer</a>,
+    originally for the Montgomery Blair High School Science Bowl Team. Built using Express.js, MongoDB, Angular,
+    and Bootstrap.</span>
+  </div>
+</footer>
