--- a/src/app/user/user.profile.component.html
+++ b/src/app/user/user.profile.component.html
@@ -11,3 +11,9 @@
     <a class="btn btn-primary btn-block" routerLink="/admin">Captain's Control Panel <i class="fas fa-trophy"></i></a>
   </div>
 </div>
+
+<h3>Rounds</h3>
+
+<p>You can edit the following rounds:</p>
+
+<sb-round-list [rounds]="rounds"></sb-round-list>
