round metadata editing works

--- a/src/app/admin/control.panel.component.html
+++ b/src/app/admin/control.panel.component.html
@@ -2,7 +2,7 @@
 
 <p>Ahoy there, matey! This page is for captains to manage the team.</p>
 
-<p>New students can join the team <b>{{ auth.team.name }}</b> by entering this join code: {{ joinCode }}.</p>
+<p>New students can join the team <b>{{ auth.team.name }}</b> by entering this join code: <code>{{ joinCode }}</code>.</p>
 
 <div class="row">
   <div class="col-sm-6">
