--- a/src/app/round/round.view.component.html
+++ b/src/app/round/round.view.component.html
@@ -5,7 +5,7 @@
 
 <h4>Details</h4>
 
-<form [formGroup]="roundForm" (ngSubmit)="submit()" class="mb-4">
+<form [formGroup]="roundForm" (ngSubmit)="submit()" class="mb-4" id="roundForm">
   <div class="form-group row">
     <label class="col-sm-2" for="roundTitle"><strong>Title</strong></label>
     <div class="col-sm-10" *ngIf="editing">
@@ -54,8 +54,6 @@
       </div>
     </div>
   </ng-container>
-
-  <button type="submit" class="btn btn-primary" *ngIf="editing">Save Round <i class="fas fa-save"></i></button>
 </form>
 
 <h4>Questions</h4>
@@ -73,11 +71,20 @@
 
     <tbody>
     <tr *ngFor="let question of questions; let i = index">
-      <td>{{ i }}</td>
+      <td>{{ i+1 }}</td>
       <td>{{ question.question.subject }}</td>
       <td>{{ question.question.text | truncate: 100 }}</td>
-      <td><a class="btn btn-primary btn-small" routerLink="/question/{{ question.question._id }}"><i class="fas fa-pencil-alt"></i></a></td>
+      <td>
+        <a routerLink="/question/{{ question.question._id }}"><i class="fas fa-pencil-alt"></i></a>&nbsp;
+        <ng-container *ngIf="editing">
+          <a (click)="swapAt(i-1)" [class.disabled]="i === 0" href="javascript:void(0)"><i class="fas fa-arrow-alt-circle-up"></i></a>&nbsp;
+          <a (click)="removeQuestion(i)" href="javascript:void(0)"><i class="fas fa-trash-alt"></i></a>&nbsp;
+          <a (click)="swapAt(i)" [class.disabled]="i === questions.length-1" href="javascript:void(0)"><i class="fas fa-arrow-alt-circle-down"></i></a>
+        </ng-container>
+      </td>
     </tr>
     </tbody>
   </table>
 </ng-container>
+
+<button type="submit" class="btn btn-success btn-block" *ngIf="editing" form="roundForm">Save Round <i class="fas fa-save"></i></button>
