--- a/src/app/tryout/tryout.component.html
+++ b/src/app/tryout/tryout.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>{{ tryout?.title }}</h1>
 
-  <ng-container *ngIf="!started">
+  <ng-container *ngIf="!started && !ended">
     <div *ngIf="tryout?.started">
       <div class="alert alert-warning" role="alert">
         <i class="fas fa-exclamation-triangle"></i> <strong>Warning!</strong> You appear to have already started this tryout, and so
