--- a/src/app/admin/tryout.results.component.html
+++ b/src/app/admin/tryout.results.component.html
@@ -14,6 +14,7 @@
       <tr>
         <th>Name</th>
         <th>Year</th>
+        <th>Email</th>
         <th>Started</th>
         <th>Finished?</th>
         <th *ngFor="let subject of config.SUBJECTS;">{{ config.SUBJECT_DISPLAY[subject] }}</th>
@@ -22,8 +23,9 @@
     </thead>
     <tbody>
       <tr *ngFor="let result of tryout.results;">
-        <td>{{ result.name.first }} {{ result.name.last }}</td>
-        <td>{{ result.year }}</td>
+        <td>{{ result.user.name.first }} {{ result.user.name.last }}</td>
+        <td>{{ result.user.year }}</td>
+        <td>{{ result.user.email }}</td>
         <td>{{ result.started | date:'short' }}</td>
         <td><i class="fas" [ngClass]="{'fa-check': result.finished, 'fa-times': !result.finished }"></i></td>
         <td *ngFor="let subject of config.SUBJECTS;">{{ result.scores[subject].score }} / {{ result.scores[subject].answered }}</td>
